<resources>
    <string name="app_name">Remind me</string>
    <string name="Login">Login</string>
    <string name="Register">Register</string>
    <string name="Registration">Registration</string>
    <string name="InvalidLogin">Invalid Login</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title">Title</string>
    <string name="hour">Hour</string>
    <string name="minute">Minute</string>
    <string name="description">Description</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="Submit">Submit</string>
    <string name="Reset">Reset</string>
    <string name="Signup">Create your account</string>
    <string name="Username_Error">ERROR!! Username is already being used</string>
    <string name="fullname">Full Name</string>
    <string name="title_activity_event_summary">EventSummaryActivity</string>
</resources>
